; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_diff_opt_parse.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_diff_opt_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_options = type { i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@PARSE_OPT_KEEP_DASHDASH = common dso_local global i32 0, align 4
@PARSE_OPT_KEEP_UNKNOWN = common dso_local global i32 0, align 4
@PARSE_OPT_NO_INTERNAL_HELP = common dso_local global i32 0, align 4
@PARSE_OPT_ONE_SHOT = common dso_local global i32 0, align 4
@PARSE_OPT_STOP_AT_NON_OPTION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @diff_opt_parse(%struct.diff_options* %0, i8** %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.diff_options*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store %struct.diff_options* %0, %struct.diff_options** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i8*, i8** %8, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %4
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %8, align 8
  br label %12

12:                                               ; preds = %11, %4
  %13 = load i32, i32* %7, align 4
  %14 = load i8**, i8*** %6, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = load %struct.diff_options*, %struct.diff_options** %5, align 8
  %17 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @PARSE_OPT_KEEP_DASHDASH, align 4
  %20 = load i32, i32* @PARSE_OPT_KEEP_UNKNOWN, align 4
  %21 = or i32 %19, %20
  %22 = load i32, i32* @PARSE_OPT_NO_INTERNAL_HELP, align 4
  %23 = or i32 %21, %22
  %24 = load i32, i32* @PARSE_OPT_ONE_SHOT, align 4
  %25 = or i32 %23, %24
  %26 = load i32, i32* @PARSE_OPT_STOP_AT_NON_OPTION, align 4
  %27 = or i32 %25, %26
  %28 = call i32 @parse_options(i32 %13, i8** %14, i8* %15, i32 %18, i32* null, i32 %27)
  store i32 %28, i32* %7, align 4
  %29 = load i32, i32* %7, align 4
  ret i32 %29
}

declare dso_local i32 @parse_options(i32, i8**, i8*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
